--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Brands<h1>
 
 <% @brands.each do |brand| %>
-	<li><%= brand.name %><li/>
+	<li><a href="/brands/<%=brand.id%>"><%= brand.name %></a><li/>
 <% end %>
 
 <form action ="brands/new" method ="get">
 	<button>Add New Brand</button>
-</form>
+</form>7
