Create partials for edit and new forms and add gem for heroku setup.

--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,3 +1,4 @@
+<div class ='container-fluid'>
 <h1>Brands<h1>
 
 <% @brands.each do |brand| %>
@@ -5,5 +6,6 @@
 <% end %>
 
 <form action ="brands/new" method ="get">
-	<button>Add New Brand</button>
-</form>7
+	<button class='btn btn-primary'>Add New Brand</button>
+</form>
+</div>
