--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -5,6 +5,10 @@
   <button>Update</button>
 </form>
 
-<form action="/shoes/<%= @shoe.id %>/delete" method="get">
+<br><form action="/shoes/<%= @shoe.id %>/delete" method="get">
   <button>Delete</button>
+</form>
+
+<br><form action="/shoes" method ="get">
+	<button>Home</button>
 </form>
