--- a/app/views/brands/edit.html.erb
+++ b/app/views/brands/edit.html.erb
@@ -11,6 +11,5 @@
 
 <form action"/brands/<%= @brand.id %>" method="post">
   <input name="_method" type="hidden" value="patch">
-  <label for="brand_name">New Brand Name</label>
-  <input id="brand_name" name="update_brand[name]" type="text".>
+  <%= render('form') %>
   <button>Update Brand</button>
